--- a/03 - CSS/practica/entrega/includes/design.css
+++ b/03 - CSS/practica/entrega/includes/design.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/semplicita');
+@import url('https://fonts.cdnfonts.com/css/semplicita');
 * {
     font-family: 'Semplicita', sans-serif;
 }
